| Summary: | ASTERISK-26241: res_pjsip: When using compact headers, rpid and pai are incorrectly generated | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2016-07-26 11:27:52 | Date Closed: | 2016-08-12 14:15:35 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | 13.10.0 14.0.0-beta1 GIT | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When compact_headers is turned on, we send malformed RPID and PAI headers:
{noformat} : "Alice" <sip:1171@192.168.0.1> : "Alice" <sip:1171@192.168.0.1>;privacy=off;screen=no {noformat} Note there's no header name. | ||
| Comments: | |||